# Android-battery-optimizer

./: AGENTS.md  README.md  pyproject.toml
android_battery_optimizer/: adb.py  android.py  app.py  cli.py  diagnose.py  ledger.py  recorder.py  rollback.py  snapshot.py  state.py  term.py  verification.py  webgui.py  webui.html
tests/: test_cli_commands.py  test_diagnose.py  test_fgs_and_review.py  test_new_requirements.py  test_optimizer.py  test_smart_restrict.py  test_state_load_hardening.py  test_term.py  test_web_gui.py
