[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "android-battery-optimizer"
version = "0.1.0"
description = "Local ADB utility for experimenting with Android battery-related settings from a computer."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aatricks"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
]

[project.urls]
"Homepage" = "https://github.com/Aatricks/Android-battery-optimization"

[project.scripts]
android-battery-optimizer = "android_battery_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["android_battery_optimizer*"]

[tool.setuptools.package-data]
android_battery_optimizer = ["webui.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["tests/"]
